--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,7 +81,9 @@
                   </div>
                </div>
 
-               <button type="submit" class="btn btn-block">Είσοδος</button>
+               <button type="submit" class="btn btn-block btn-login">
+                  Είσοδος
+               </button>
             </form>
 
             <div
@@ -97,7 +99,9 @@
                <div style="flex: 1; height: 1px; background: #eee"></div>
             </div>
 
-            <a th:href="@{/gov-login}" class="btn btn-block">Login with Gov</a>
+            <a th:href="@{/gov-login}" class="btn btn-block btn-login-gov">
+               Login with Gov
+            </a>
 
             <p style="margin-top: 20px">
                Δεν έχετε λογαριασμό;
