--- a/src/main/resources/templates/gov-login.html
+++ b/src/main/resources/templates/gov-login.html
@@ -89,7 +89,9 @@
                   </div>
                </div>
 
-               <button type="submit" class="btn btn-block">Σύνδεση</button>
+               <button type="submit" class="btn btn-block btn-login-gov">
+                  Σύνδεση
+               </button>
             </form>
 
             <p style="margin-top: 16px">
